fix: body had an overflow hidden so I wasn't able to make a new section

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -8,7 +8,6 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    overflow: hidden;
 }
 
 
@@ -43,7 +42,7 @@ video {
     display: flex;
     flex-direction: column;
     color: white;
-    position: absolute;
+    position: relative;
     align-items:flex-start;
     left: 0;
     right: 0;
@@ -68,7 +67,7 @@ video {
     display: flex;
     padding: 0;
     justify-content:space-between;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     right: 0;
